--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
 	"dependencies": {
 		"@libsql/client": "^0.6.0",
 		"drizzle-orm": "^0.30.8",
-		"firebase": "^10.11.0",
-		"svelte-modal": "^0.4.0"
+		"firebase": "^10.11.0"
 	}
 }
