--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview",
-		"generate": "drizzle-kit generate:sqlite",
-		"migrate": "drizzle-kit push:sqlite",
-		"studio": "drizzle-kit studio"
+		"preview": "vite preview"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -17,7 +14,6 @@
 		"autoprefixer": "^10.4.19",
 		"dotenv": "^16.4.5",
 		"dotenv-webpack": "^8.1.0",
-		"drizzle-kit": "^0.20.14",
 		"postcss": "^8.4.38",
 		"svelte": "^4.2.7",
 		"tailwindcss": "^3.4.3",
@@ -27,7 +23,6 @@
 	"type": "module",
 	"dependencies": {
 		"@libsql/client": "^0.6.0",
-		"drizzle-orm": "^0.30.8",
 		"firebase": "^10.11.0"
 	}
 }
