--- a/package.json
+++ b/package.json
@@ -1,28 +1,50 @@
 {
-	"name": "taskmanager",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"autoprefixer": "^10.4.19",
-		"dotenv": "^16.4.5",
-		"dotenv-webpack": "^8.1.0",
-		"postcss": "^8.4.38",
-		"svelte": "^4.2.7",
-		"tailwindcss": "^3.4.3",
-		"typescript": "^5.4.5",
-		"vite": "^5.0.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"@libsql/client": "^0.6.0",
-		"firebase": "^10.11.0"
-	}
+  "name": "taskmanager",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "server": "nodemon server.js",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-static": "^3.0.5",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.7",
+    "svelte": "^4.2.7",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.0.3"
+  },
+  "type": "module",
+  "dependencies": {
+    "@capacitor-firebase/messaging": "^6.1.0",
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/camera": "^6.0.2",
+    "@capacitor/cli": "^6.1.2",
+    "@capacitor/core": "^6.1.2",
+    "@capacitor/geolocation": "^6.0.1",
+    "@capacitor/ios": "^6.1.2",
+    "@capacitor/push-notifications": "^6.0.2",
+    "@ionic/pwa-elements": "^3.3.0",
+    "@libsql/client": "^0.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "firebase": "^10.11.0",
+    "firebase-admin": "^12.6.0",
+    "nodemon": "^3.1.7"
+  },
+  "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/main/packages/create-svelte).",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
