--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@capacitor/geolocation": "^6.0.1",
     "@capacitor/ios": "^6.1.2",
     "@capacitor/push-notifications": "^6.0.2",
+    "@capacitor/toast": "^6.0.2",
     "@ionic/pwa-elements": "^3.3.0",
     "@libsql/client": "^0.6.0",
     "cors": "^2.8.5",
